<resources>
    <string name="app_name">PSL Talk</string>
    <string name="search_match">search match</string>
    <string name="new_match">New match</string>
    <string name="delete_match">Delete match</string>
    <string name="add_soccer_match">Add Soccer match</string>
    <string name="teamATextView">Team A</string>
    <string name="teamBTextView">Team B</string>
    <string name="title_activity_main">PSL Talk</string>
    <string name="settings">Settings</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_name">Enter name</string>
    <string name="sign_up_header">SIGN UP</string>
    <string name="psl_sign_up">PSL SIGN UP</string>
    <string name="psl_log_in">PSL LOG IN</string>
    <string name="log_in">LOG IN</string>
    <string name="add_comment">Add Comment</string>
    <string name="log_out">Log out</string>
    <string name="pick_date">Pick Date</string>

</resources>
