<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/teamA_editext_edit_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/teamATextView"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/teamA_score_editext_edit_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="team A score"
            android:inputType="number" />

        <EditText
            android:id="@+id/teamB_editext_edit_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/teamBTextView"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/teamB_score_editext_edit_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="team B score"
            android:inputType="number" />

        <EditText
            android:id="@+id/label_editext_edit_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="label"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/pick_date_btn_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_date" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>