<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSky"
    tools:context=".AddActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/viewMatchToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/AddTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_soccer_match"
            android:textColor="@color/colorLight"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="18dp" />


    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewMatchToolBar"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/mycustomized_bg" />

    <TextView
        android:id="@+id/teamATextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/teamATextView"
        android:textColor="@color/colorLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewMatchToolBar" />

    <EditText
        android:id="@+id/teamAEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:ems="10"
        android:gravity="center|center_horizontal|center_vertical"
        android:inputType="textPersonName"
        android:textColor="@color/colorLight"
        android:textColorHint="@color/colorLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamATextView" />

    <TextView
        android:id="@+id/teamBTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/teamBTextView"
        android:textColor="@color/colorLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_linear_layout" />

    <EditText
        android:id="@+id/teamBEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:textColor="@color/colorLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamBTextView" />

    <TextView
        android:id="@+id/scoreTeamATextField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="Score Team A"
        android:textColor="@color/colorLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamAEditText" />


    <LinearLayout
        android:id="@+id/spinner_linear_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:text="Score Team A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreTeamATextField">

        <com.michaelmuenzer.android.scrollablennumberpicker.ScrollableNumberPicker
            android:id="@+id/number_picker_horizontal_scroll_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/number_picker_bg_color"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:snp_buttonIconLeft="@drawable/ic_chevron_left_black_24dp"
            app:snp_buttonIconRight="@drawable/ic_chevron_right_black_24dp"
            app:snp_buttonPaddingBottom="8dp"
            app:snp_buttonPaddingLeft="8dp"
            app:snp_buttonPaddingRight="8dp"
            app:snp_buttonPaddingTop="8dp"
            app:snp_maxValue="1000"
            app:snp_minValue="0"
            app:snp_orientation="horizontal"
            app:snp_scrollEnabled="true"
            app:snp_stepSize="1"
            app:snp_updateInterval="25"
            app:snp_value="0"
            app:snp_valueMarginEnd="30dp"
            app:snp_valueMarginStart="30dp" />


    </LinearLayout>


    <TextView
        android:id="@+id/scoreTeamBTextField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="Score Team B"
        android:textColor="@color/colorLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamBEditText" />


    <LinearLayout
        android:id="@+id/spinner_linear_layout_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:text="Score Team A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreTeamBTextField">

        <com.michaelmuenzer.android.scrollablennumberpicker.ScrollableNumberPicker
            android:id="@+id/number_picker_horizontal_scroll_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/number_picker_bg_color"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:snp_buttonIconLeft="@drawable/ic_chevron_left_black_24dp"
            app:snp_buttonIconRight="@drawable/ic_chevron_right_black_24dp"
            app:snp_buttonPaddingBottom="8dp"
            app:snp_buttonPaddingLeft="8dp"
            app:snp_buttonPaddingRight="8dp"
            app:snp_buttonPaddingTop="8dp"
            app:snp_maxValue="1000"
            app:snp_minValue="0"
            app:snp_orientation="horizontal"
            app:snp_scrollEnabled="true"
            app:snp_stepSize="1"
            app:snp_updateInterval="25"
            app:snp_value="0"
            app:snp_valueMarginEnd="30dp"
            app:snp_valueMarginStart="30dp" />


    </LinearLayout>

    <Button
        android:id="@+id/pickDateBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:onClick="pickDate"
        android:text="@string/pick_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelEditText" />

    <EditText
        android:id="@+id/labelEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:ems="10"
        android:gravity="center"
        android:hint="Please enter a label"
        android:inputType="textPersonName"
        android:textColor="@color/colorLight"
        android:textColorHint="@color/colorLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_linear_layout_2" />


</android.support.constraint.ConstraintLayout>